@@ -1,5 +1,11 @@
 package uk.gov.hmcts.reform.civil.ga.handler.callback.camunda.businessprocess;
 
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
@@ -9,9 +15,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDataContent;
@@ -57,7 +60,6 @@ import uk.gov.hmcts.reform.civil.ga.model.genapplication.finalorder.AssistedOrde
 import uk.gov.hmcts.reform.civil.sampledata.CaseDetailsBuilder;
 import uk.gov.hmcts.reform.civil.ga.service.GaForLipService;
 import uk.gov.hmcts.reform.civil.ga.service.ParentCaseUpdateHelper;
-import uk.gov.hmcts.reform.civil.ga.utils.JudicialDecisionNotificationUtil;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
@@ -71,6 +73,7 @@ import java.util.Optional;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyMap;
+import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -96,35 +99,44 @@ import static uk.gov.hmcts.reform.civil.sampledata.CaseDataBuilder.CUSTOMER_REFE
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.wrapElements;
 
-@SpringBootTest(classes = {
-    EndGeneralAppBusinessProcessCallbackHandler.class,
-    CaseDetailsConverter.class,
-    GaCoreCaseDataService.class,
-    ParentCaseUpdateHelper.class,
-    ObjectMapper.class,
-    JudicialDecisionNotificationUtil.class
-})
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
-    @Autowired
     private EndGeneralAppBusinessProcessCallbackHandler handler;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    @Spy
+    private ObjectMapper objectMapper = new ObjectMapper();
 
-    @Autowired
-    private ParentCaseUpdateHelper parentCaseUpdateHelper;
-
-    @MockBean
+    @Mock
     private CaseDetailsConverter caseDetailsConverter;
 
-    @MockBean
+    @Mock
     private GaCoreCaseDataService coreCaseDataService;
 
-    @MockBean
+    @Mock
     private GaForLipService gaForLipService;
-    @MockBean
+
+    @Mock
     private FeatureToggleService featureToggleService;
+
+    private ParentCaseUpdateHelper parentCaseUpdateHelper;
+
+    @BeforeEach
+    void setUpHandler() {
+        parentCaseUpdateHelper = spy(new ParentCaseUpdateHelper(
+            caseDetailsConverter,
+            coreCaseDataService,
+            featureToggleService,
+            objectMapper
+        ));
+        handler = new EndGeneralAppBusinessProcessCallbackHandler(
+            caseDetailsConverter,
+            gaForLipService,
+            parentCaseUpdateHelper
+        );
+    }
+
     @Captor
     private ArgumentCaptor<Map<String, Object>> mapCaptor;
 
@@ -162,34 +174,33 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppParentCaseLink(GeneralAppParentCaseLink.builder().caseReference("0000").build())
                 .build();
 
-            GeneralApplicationsDetails judgeCollection = GeneralApplicationsDetails.builder()
-                .build();
             GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
                 .caseState("Awaiting Application Payment")
                 .caseLink(CaseLink.builder()
                               .caseReference("1234")
                               .build())
                 .build();
-            GADetailsRespondentSol respondentOneCollection = GADetailsRespondentSol.builder().build();
-
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
                 .claimantGaAppDetails(wrapElements(claimantCollection))
                 .build();
 
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseData(NO).getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseData(NO);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
-            handler.handle(getCallbackParamsGaForLipCaseData(NO));
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(),
+                              new TypeReference<>() {
+                              });
             List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
                                                                               .get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
@@ -212,15 +223,12 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(Fee.builder().code("PAY").build()).build())
                 .build();
 
-            GeneralApplicationsDetails judgeCollection = GeneralApplicationsDetails.builder()
-                .build();
             GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
                 .caseState("Awaiting Application Payment")
                 .caseLink(CaseLink.builder()
                               .caseReference("1234")
                               .build())
                 .build();
-            GADetailsRespondentSol respondentOneCollection = GADetailsRespondentSol.builder().build();
 
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
                 .claimantGaAppDetails(wrapElements(claimantCollection))
@@ -228,18 +236,21 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseData(NO).getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseData(NO);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
-            handler.handle(getCallbackParamsGaForLipCaseData(NO));
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(),
+                              new TypeReference<>() {
+                              });
             List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
                                                                               .get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
@@ -263,15 +274,12 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(Fee.builder().code("PAY").build()).build())
                 .build();
 
-            GeneralApplicationsDetails judgeCollection = GeneralApplicationsDetails.builder()
-                .build();
             GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
                 .caseState("Awaiting Application Payment")
                 .caseLink(CaseLink.builder()
                               .caseReference("1234")
                               .build())
                 .build();
-            GADetailsRespondentSol respondentOneCollection = GADetailsRespondentSol.builder().build();
 
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
                 .claimantGaAppDetails(wrapElements(claimantCollection))
@@ -279,18 +287,21 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseData(NO).getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseData(NO);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
-            handler.handle(getCallbackParamsGaForLipCaseData(NO));
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(),
+                              new TypeReference<>() {
+                              });
             List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
                                                                               .get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
@@ -299,7 +310,7 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
         @Test
         void shouldAddGaToJudgeCollectionPaymentThroughHelpWithFeesFullRemission() {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
             GeneralApplicationCaseData updatedCaseDate = GeneralApplicationCaseData.builder()
                 .parentClaimantIsApplicant(YES)
                 .generalAppHelpWithFees(new HelpWithFees().setHelpWithFee(YES))
@@ -318,31 +329,32 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                                           .build())
                 .build();
 
-            GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
-                .caseState("Awaiting Application Payment")
-                .caseLink(CaseLink.builder()
-                              .caseReference("1234")
-                              .build())
-                .build();
-
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
-                .claimantGaAppDetails(wrapElements(claimantCollection))
+                .claimantGaAppDetails(wrapElements(GeneralApplicationsDetails.builder()
+                                                       .caseState("Awaiting Application Payment")
+                                                       .caseLink(CaseLink.builder()
+                                                                     .caseReference("1234")
+                                                                     .build())
+                                                       .build()))
                 .build();
 
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseDataFullRemission().getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseDataFullRemission();
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
-            handler.handle(getCallbackParamsGaForLipCaseDataFullRemission());
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(),
+                              new TypeReference<>() {
+                              });
             List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
                                                                               .get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
@@ -351,7 +363,7 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
         @Test
         void shouldAddGaToJudgeCollectionPaymentThroughHelpWithFeesPartRemission() {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
             GeneralApplicationCaseData updatedCaseDate = GeneralApplicationCaseData.builder()
                 .parentClaimantIsApplicant(YES)
                 .generalAppHelpWithFees(new HelpWithFees().setHelpWithFee(YES))
@@ -371,31 +383,32 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                                           .build())
                 .build();
 
-            GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
-                .caseState("Awaiting Application Payment")
-                .caseLink(CaseLink.builder()
-                              .caseReference("1234")
-                              .build())
-                .build();
-
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
-                .claimantGaAppDetails(wrapElements(claimantCollection))
+                .claimantGaAppDetails(wrapElements(GeneralApplicationsDetails.builder()
+                                                       .caseState("Awaiting Application Payment")
+                                                       .caseLink(CaseLink.builder()
+                                                                     .caseReference("1234")
+                                                                     .build())
+                                                       .build()))
                 .build();
 
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseDataPartRemission().getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseDataPartRemission();
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
-            handler.handle(getCallbackParamsGaForLipCaseDataPartRemission());
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(),
+                              new TypeReference<>() {
+                              });
             List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
                                                                               .get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
@@ -420,27 +433,24 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                 .generalAppParentCaseLink(GeneralAppParentCaseLink.builder().caseReference("0000").build())
                 .build();
 
-            GeneralApplicationsDetails judgeCollection = GeneralApplicationsDetails.builder()
-                .build();
-            GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
-                .caseState("Awaiting Application Payment")
-                .caseLink(CaseLink.builder()
-                              .caseReference("1234")
-                              .build())
-                .build();
-            GADetailsRespondentSol respondentOneCollection = GADetailsRespondentSol.builder().build();
-
             GeneralApplicationCaseData parentCaseData = GeneralApplicationCaseData.builder()
-                .claimantGaAppDetails(wrapElements(claimantCollection))
+                .claimantGaAppDetails(wrapElements(GeneralApplicationsDetails.builder()
+                                                       .caseState("Awaiting Application Payment")
+                                                       .caseLink(CaseLink.builder()
+                                                                     .caseReference("1234")
+                                                                     .build())
+                                                       .build()))
                 .build();
 
             when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getCallbackParamsGaForLipCaseData(NO).getRequest().getCaseDetails()))
+            CallbackParams callbackParams = getCallbackParamsGaForLipCaseData(NO);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(callbackParams.getRequest().getCaseDetails()))
                 .thenReturn(updatedCaseDate);
-            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(getStartEventResponse());
-            when(caseDetailsConverter.toGeneralApplicationCaseData(getStartEventResponse().getCaseDetails())).thenReturn(parentCaseData);
+            StartEventResponse startEventResponse = getStartEventResponse();
+            when(coreCaseDataService.startUpdate(any(), any())).thenReturn(startEventResponse);
+            when(caseDetailsConverter.toGeneralApplicationCaseData(startEventResponse.getCaseDetails())).thenReturn(parentCaseData);
             when(coreCaseDataService.caseDataContentFromStartEventResponse(any(), anyMap())).thenCallRealMethod();
-            handler.handle(getCallbackParamsGaForLipCaseData(NO));
+            handler.handle(callbackParams);
             verify(coreCaseDataService, times(2))
                 .submitUpdate(parentCaseId.capture(), caseDataContent.capture());
             verify(coreCaseDataService, times(2))
@@ -448,17 +458,17 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(caseDataContent.getAllValues()).hasSize(2);
 
             Map<String, Object> map = objectMapper
-                .convertValue(caseDataContent.getAllValues().get(0).getData(),
-                              new TypeReference<Map<String, Object>>() {});
+                .convertValue(caseDataContent.getAllValues().getFirst().getData(),
+                              new TypeReference<>() {
+                              });
             List<?> gaDetailsMasterCollection = objectMapper.convertValue(map
                                                                               .get("gaDetailsMasterCollection"),
                                                                           new TypeReference<>(){});
             assertThat(gaDetailsMasterCollection).hasSize(1);
-
         }
 
         public CallbackParams getCallbackParamsGaForLipCaseData(YesOrNo hwf) {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .isGaApplicantLip(YES)
                 .generalAppType(GAApplicationType.builder().types(types).build())
@@ -468,7 +478,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
             CaseDetails caseDetails = CaseDetails
                 .builder()
-                .data(objectMapper.convertValue(caseData, new TypeReference<Map<String, Object>>() {}))
+                .data(objectMapper.convertValue(caseData, new TypeReference<>() {
+                }))
                 .build();
 
             return CallbackParams.builder()
@@ -480,7 +491,7 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
         }
 
         public CallbackParams getCallbackParamsGaForLipCaseDataFullRemission() {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .isGaApplicantLip(YES)
                 .generalAppType(GAApplicationType.builder().types(types).build())
@@ -492,7 +503,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
             CaseDetails caseDetails = CaseDetails
                 .builder()
-                .data(objectMapper.convertValue(caseData, new TypeReference<Map<String, Object>>() {}))
+                .data(objectMapper.convertValue(caseData, new TypeReference<>() {
+                }))
                 .build();
 
             return CallbackParams.builder()
@@ -504,7 +516,7 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
         }
 
         public CallbackParams getCallbackParamsGaForLipCaseDataPartRemission() {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .isGaApplicantLip(YES)
                 .generalAppType(GAApplicationType.builder().types(types).build())
@@ -517,7 +529,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
             CaseDetails caseDetails = CaseDetails
                 .builder()
-                .data(objectMapper.convertValue(caseData, new TypeReference<Map<String, Object>>() {}))
+                .data(objectMapper.convertValue(caseData, new TypeReference<>() {
+                }))
                 .build();
 
             return CallbackParams.builder()
@@ -529,22 +542,20 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
         }
 
         public StartEventResponse getStartEventResponse() {
-            GeneralApplicationsDetails judgeCollection = GeneralApplicationsDetails.builder()
-                .build();
             GeneralApplicationsDetails claimantCollection = GeneralApplicationsDetails.builder()
                 .caseState("Awaiting Application Payment")
                 .caseLink(CaseLink.builder()
                               .caseReference("1234L")
                               .build())
                 .build();
-            GADetailsRespondentSol respondentOneCollection = GADetailsRespondentSol.builder().build();
 
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .claimantGaAppDetails(wrapElements(claimantCollection))
                 .build();
             CaseDetails caseDetails = CaseDetails.builder().data(objectMapper.convertValue(
                 caseData,
-                new TypeReference<Map<String, Object>>() {})).build();
+                new TypeReference<>() {
+                })).build();
 
             return StartEventResponse.builder().caseDetails(caseDetails).build();
         }
@@ -598,10 +609,10 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsRespondentSolTwo.size()).isEqualTo(1);
 
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
-                .isEqualTo("Awaiting Respondent Response");;
+                .isEqualTo("Awaiting Respondent Response");
 
         }
 
@@ -649,10 +660,10 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsRespondentSolTwo.size()).isEqualTo(1);
 
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
-                .isEqualTo("Proceeds In Heritage");;
+                .isEqualTo("Proceeds In Heritage");
 
         }
 
@@ -731,18 +742,18 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsRespondentSolTwo.size()).isEqualTo(1);
 
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                 .isEqualTo("Application Dismissed");
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Application Dismissed");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Application Dismissed");
 
@@ -784,23 +795,23 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsRespondentSolTwo.size()).isEqualTo(1);
 
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                 .isEqualTo("Application Submitted - Awaiting Judicial Decision");
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Application Submitted - Awaiting Judicial Decision");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Application Submitted - Awaiting Judicial Decision");
 
             GADetailsRespondentSol generalAppRespTwo = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppRespTwo.getCaseState())
                 .isEqualTo("Application Submitted - Awaiting Judicial Decision");
@@ -904,22 +915,22 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsMasterCollection.size()).isEqualTo(1);
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Awaiting Respondent Response");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Awaiting Respondent Response");
 
             GADetailsRespondentSol generalAppRespTwo = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppRespTwo.getCaseState())
                 .isEqualTo("Awaiting Respondent Response");
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                 .isEqualTo("Awaiting Respondent Response");
@@ -1154,22 +1165,22 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsMasterCollection.size()).isEqualTo(1);
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Awaiting Application Payment");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Awaiting Application Payment");
 
             GADetailsRespondentSol generalAppRespTwo = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(generalAppRespTwo.getCaseState())
                 .isEqualTo("Awaiting Application Payment");
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                 new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                 .isEqualTo("Awaiting Application Payment");
@@ -1213,22 +1224,22 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsMasterCollection.size()).isEqualTo(1);
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Order Made");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Order Made");
 
             GADetailsRespondentSol generalAppRespTwo = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalAppRespTwo.getCaseState())
                     .isEqualTo("Order Made");
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                     .isEqualTo("Order Made");
@@ -1269,22 +1280,22 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
             assertThat(gaDetailsMasterCollection.size()).isEqualTo(1);
 
             GeneralApplicationsDetails generalApp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) generalApplicationDetails.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) generalApplicationDetails.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalApp.getCaseState()).isEqualTo("Listed for a Hearing");
 
             GADetailsRespondentSol generalAppResp = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSol.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalAppResp.getCaseState()).isEqualTo("Listed for a Hearing");
 
             GADetailsRespondentSol generalAppRespTwo = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsRespondentSolTwo.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(generalAppRespTwo.getCaseState())
                     .isEqualTo("Listed for a Hearing");
             GeneralApplicationsDetails gaDetailsMasterColl = objectMapper.convertValue(
-                    ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.get(0)).get("value"),
+                    ((LinkedHashMap<?, ?>) gaDetailsMasterCollection.getFirst()).get("value"),
                     new TypeReference<>() {});
             assertThat(gaDetailsMasterColl.getCaseState())
                     .isEqualTo("Listed for a Hearing");
@@ -1437,7 +1448,7 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
         }
 
         private GeneralApplicationCaseData getSampleGeneralApplicationCaseDataForCCJ(YesOrNo isConsented, YesOrNo isTobeNotified) {
-            List<GeneralApplicationTypes> types = Arrays.asList(CONFIRM_CCJ_DEBT_PAID);
+            List<GeneralApplicationTypes> types = List.of(CONFIRM_CCJ_DEBT_PAID);
             return GeneralApplicationCaseDataBuilder.builder().buildCaseDateBaseOnGeneralApplication(
                     getGeneralApplication(isConsented, isTobeNotified))
                 .toBuilder().ccdCaseReference(CHILD_CCD_REF).generalAppType(GAApplicationType.builder().types(types).build()).build();
@@ -1445,7 +1456,7 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
 
         private GeneralApplicationCaseData getSampleGeneralApplicationCaseDataForVaryJudgement(YesOrNo isConsented, YesOrNo isTobeNotified,
                                                                              List<Element<GARespondentResponse>> respondentsResponses) {
-            List<GeneralApplicationTypes> types = Arrays.asList(VARY_PAYMENT_TERMS_OF_JUDGMENT);
+            List<GeneralApplicationTypes> types = List.of(VARY_PAYMENT_TERMS_OF_JUDGMENT);
 
             return GeneralApplicationCaseDataBuilder.builder().buildCaseDateBaseOnGeneralApplication(
                     getGeneralApplicationVary(isConsented, isTobeNotified, respondentsResponses))
@@ -1501,7 +1512,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                                               .data(objectMapper.convertValue(
                                                   getSampleGeneralApplicationCaseDataMulti(isConsented, isTobeNotified,
                                                                                            respondentResponses, respondentDetails),
-                                                  new TypeReference<Map<String, Object>>() {})).id(CASE_ID).build())
+                                                  new TypeReference<>() {
+                                                  })).id(CASE_ID).build())
                              .eventId("END_BUSINESS_PROCESS_GASPEC")
                              .build())
                 .caseData(getSampleGeneralApplicationCaseDataMulti(isConsented, isTobeNotified,
@@ -1520,7 +1532,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                              .caseDetails(CaseDetails.builder()
                                               .data(objectMapper.convertValue(
                                                   getSampleGeneralApplicationCaseDataForVaryJudgement(isConsented, isTobeNotified, respondentsResponses),
-                                                  new TypeReference<Map<String, Object>>() {})).id(CASE_ID).build())
+                                                  new TypeReference<>() {
+                                                  })).id(CASE_ID).build())
                              .eventId("END_BUSINESS_PROCESS_GASPEC")
                              .build())
                 .caseData(getSampleGeneralApplicationCaseDataForVaryJudgement(isConsented, isTobeNotified, respondentsResponses))
@@ -1537,7 +1550,8 @@ public class EndGeneralAppBusinessProcessCallbackHandlerTest extends GeneralAppl
                             .caseDetails(CaseDetails.builder()
                                     .data(objectMapper.convertValue(
                                             getSampleGeneralApplicationCaseData(isConsented, isTobeNotified),
-                                            new TypeReference<Map<String, Object>>() {})).id(CASE_ID).build())
+                                            new TypeReference<>() {
+                                            })).id(CASE_ID).build())
                             .eventId("END_BUSINESS_PROCESS_GASPEC")
                             .build())
                     .caseData(getSampleGeneralApplicationCaseData(isConsented, isTobeNotified))
